pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-165-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/165-html_blocks.md
---
</ins>
*bar*
